# python-qlient-aiohttp

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  pytest.yml
docs/: api.md  index.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/search/: search_index.json
src/qlient/aiohttp/: __init__.py  backends.py  clients.py  exceptions.py
tests/: conftest.py  test_aiohttp_client.py
