[tool.poetry]
name = "qlient-aiohttp"
version = "0.1.0-beta"
description = "A blazingly fast and modern graphql client based on qlient-core and aiohttp"
authors = ["Daniel Seifert <info@danielseifert.ch>"]
maintainers = ["Daniel Seifert <info@danielseifert.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
qlient-core = "^0.1.0-beta.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
coverage = "^6.4.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^3.0.0"
black = "^22.3.0"
strawberry-graphql = "^0.115.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
